--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>3.3.1</version>
+            <version>2.4.1</version>
         </dependency>
 
         <dependency>
@@ -48,6 +48,12 @@
         <dependency>
             <groupId>co.aikar</groupId>
             <artifactId>idb-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>co.aikar</groupId>
+            <artifactId>idb-bukkit</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
@@ -101,7 +107,7 @@
                     <relocations>
                         <relocation>
                             <pattern>co.aikar.idb</pattern>
-                            <shadedPattern>[PACKAGE].idb</shadedPattern>
+                            <shadedPattern>fr.tetelie.practice.idb</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
