finish ranked system and add little things

--- a/pom.xml
+++ b/pom.xml
@@ -39,13 +39,6 @@
         </dependency>
 
         <dependency>
-            <groupId>us.noks</groupId>
-            <artifactId>MinecraftServer</artifactId>
-            <version>1.7.10-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
@@ -69,6 +62,15 @@
             <version>1.16.18</version>
             <scope>provided</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.sathonay</groupId>
+            <artifactId>MinecraftServer</artifactId>
+            <version>1.7.10-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
